[package]
name = "dungeon-deck"
version = "2.0.0"
edition = "2021"
authors = ["Keir Lawson"]
license = "MIT"

[dependencies]
paho-mqtt = { version = "0.12.3", features = ["vendored-ssl"]}
rodio = { version = "0.17.3", features = ["symphonia-all"] }
streamdeck = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.5"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"
ctrlc = { version = "3.4.1", features = ["termination"] }
image = "0.24.7"

[profile.release]
strip = "symbols"
